fix: fix dropdown dark mode

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -371,3 +371,21 @@ img {
     object-fit: cover;
     border-radius: 4px;
 }
+
+body.dark .dropdown-list {
+    background: #222; /* Fundo escuro */
+    border: 1px solid #444;
+    color: white;
+    box-shadow: 0px 4px 6px rgba(255, 255, 255, 0.2);
+}
+
+/* Cor dos itens no modo escuro */
+body.dark .dropdown-list li {
+    border-bottom: 1px solid #444;
+    color: white;
+}
+
+/* Hover no modo escuro */
+body.dark .dropdown-list li:hover {
+    background: #333;
+}
